# glfw-legacy

./: CMakeLists.txt  COPYING.txt  Makefile  README.md  THIS_BRANCH_IS_NO_LONGER_MAINTAINED.txt  compile.ami  compile.bat  compile.sh  license.txt  readme.html
contrib/d/imports/: glfw.d
contrib/d/lib/: glfwdll.def
contrib/delphi/lib/: glfw.pas
contrib/lua/src/: luaglfw.c
docs/: Makefile  cleanup.bat  glfwdoc.sty  glfwrm.tex  glfwug.tex  readme.txt
examples/: CMakeLists.txt  Info.plist  MakeBundle.sh  Makefile.amigaos.gcc  Makefile.amigaos.vbcc  Makefile.cocoa  Makefile.dos.djgpp  Makefile.macosx  Makefile.macosx.gcc  Makefile.macosx.universal  Makefile.win32.bcc  Makefile.win32.cross-mgw  Makefile.win32.cygwin  Makefile.win32.lcc  Makefile.win32.mgw  Makefile.win32.mingw  Makefile.win32.msvc  Makefile.win32.msys  Makefile.win32.ow  Makefile.win32.pellesc  Makefile.x11.in  boing.c  gears.c  heightmap.c  joytest.c  keytest.c  listmodes.c  mipmaps.c  mtbench.c  mthello.c  particles.c  pong3d.c  splitview.c  triangle.c  wave.c
include/GL/: glfw.h
lib/: enable.c  fullscreen.c  glext.c  image.c  init.c  input.c  internal.h  joystick.c  stream.c  tga.c  thread.c  time.c  window.c
lib/amigaos/: Makefile.amigaos.gcc  Makefile.amigaos.vbcc  amigaos_enable.c  amigaos_fullscreen.c  amigaos_glext.c  amigaos_init.c  amigaos_joystick.c  amigaos_thread.c  amigaos_time.c  amigaos_window.c  platform.h  todo.txt
lib/carbon/: carbon_enable.c  carbon_fullscreen.c  carbon_glext.c  carbon_init.c  carbon_joystick.c  carbon_thread.c  carbon_time.c  carbon_window.c  platform.h
lib/cocoa/: CMakeLists.txt  Makefile.cocoa  Makefile.macosx  cocoa_enable.m  cocoa_fullscreen.m  cocoa_glext.m  cocoa_init.m  cocoa_joystick.m  cocoa_thread.c  cocoa_time.m  cocoa_window.m  macosx_fullscreen.m  macosx_glext.m  macosx_init.m  macosx_window.m  platform.h
lib/dos/: Makefile.dos.djgpp  dos_enable.c  dos_events.c  dos_fullscreen.c  dos_glext.c  dos_init.c  dos_irq.s  dos_joystick.c  dos_keyboard.c  dos_mouse.c  dos_thread.c  dos_time.c  dos_window.c  platform.h
lib/macosx/: CMakeLists.txt  Makefile.macosx  Makefile.macosx.gcc  Makefile.macosx.gcc.universal  Makefile.macosx.universal  libglfw.pc.in  macosx_enable.c  macosx_fullscreen.c  macosx_glext.c  macosx_init.c  macosx_joystick.c  macosx_thread.c  macosx_time.c  macosx_window.c  platform.h
lib/win32/: CMakeLists.txt  Makefile.win32.bcc  Makefile.win32.cross-mgw  Makefile.win32.cygwin  Makefile.win32.lcc  Makefile.win32.mgw  Makefile.win32.mingw  Makefile.win32.msvc  Makefile.win32.ow  Makefile.win32.pellesc  glfwdll.def  glfwdll_mgw1.def  glfwdll_mgw2.def  glfwdll_pellesc.def  libglfw.pc.cmake  libglfw.pc.in  platform.h  win32_dllmain.c  win32_enable.c  win32_fullscreen.c  win32_glext.c  win32_init.c  win32_joystick.c  win32_thread.c  win32_time.c  win32_window.c
lib/x11/: CMakeLists.txt  Makefile.x11.in  libglfw.pc.cmake  platform.h  x11_config.h.cmake  x11_enable.c  x11_fullscreen.c  x11_glext.c  x11_init.c  x11_joystick.c  x11_keysym2unicode.c  x11_thread.c  x11_time.c  x11_window.c
support/d/: readme.html
support/d/examples/: Makefile  SConstruct  boing.d  gears.d  keytest.d  listmodes.d  mipmaps.d  mtbench.d  mthello.d  particles.d  pong3d.d  splitview.d  triangle.d  wave.d
support/d/imports/: gl.d  glfw.d  glu.d
support/d/lib/: glfwdll.def
support/delphi/: readme.html
support/delphi/lib/: glfw.pas
support/lua/: readme.html
support/lua/examples/: gears.lua  test1.lua
support/lua/src/: luaglfw.c  luaglfw.h  runlua.c
support/masm/: readme.html
support/masm/include/: glfw.inc
support/masm/lib/: glfwdll.lib
support/msvc100/: GLFW.vcxproj  GLFWDLL.vcxproj  accuracy.vcxproj  boing.vcxproj  defaults.vcxproj  dynamic.vcxproj  events.vcxproj  fsaa.vcxproj  fsinput.vcxproj  gears.vcxproj  heightmap.vcxproj  iconify.vcxproj  joysticks.vcxproj  listmodes.vcxproj  mipmaps.vcxproj  mtbench.vcxproj  mthello.vcxproj  particles.vcxproj  peter.vcxproj  pong3d.vcxproj  reopen.vcxproj  splitview.vcxproj  tearing.vcxproj  triangle.vcxproj  version.vcxproj  wave.vcxproj
support/msvc110/: GLFW.sln  GLFW.vcxproj  GLFWDLL.vcxproj  accuracy.vcxproj  boing.vcxproj  defaults.vcxproj  dynamic.vcxproj  events.vcxproj  fsaa.vcxproj  fsinput.vcxproj  gears.vcxproj  heightmap.vcxproj  iconify.vcxproj  joysticks.vcxproj  listmodes.vcxproj  mipmaps.vcxproj  mtbench.vcxproj  mthello.vcxproj  particles.vcxproj  peter.vcxproj  pong3d.vcxproj  reopen.vcxproj  splitview.vcxproj  tearing.vcxproj  triangle.vcxproj  version.vcxproj  wave.vcxproj
support/msvc80/: GLFWDLL.vcproj  gears.vcproj  keytest.vcproj
support/msvc90/: GLFW.sln  GLFW.vcproj  GLFWDLL.vcproj  accuracy.vcproj  defaults.vcproj  events.vcproj  fsaa.vcproj  fullscreen.vcproj  joytest.vcproj  peter.vcproj  reopen.vcproj  tearing.vcproj  version.vcproj
support/pascal/: glfw.pas
support/visualbasic/: readme.html
support/visualbasic/bindings/: glfw.bas  glu32.bas  opengl32.bas
tests/: CMakeLists.txt  Makefile.carbon  Makefile.carbon.universal  Makefile.cocoa  Makefile.macosx  Makefile.macosx.universal  Makefile.win32.cross-mgw  Makefile.win32.cygwin  Makefile.win32.mingw  Makefile.win32.msys  Makefile.x11.in  README  accuracy.c  defaults.c  dynamic.c  events.c  fsaa.c  fullscreen.c  iconify.c  joysticks.c  peter.c  reopen.c  tearing.c  version.c
